--- a/CATS.tex
+++ b/CATS.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}
 \includegraphics[width=2in,height=1.7in]{figures/cats_confs.png}\hspace{0.2in}\includegraphics[width=2in,height=1.5in]{figures/w54_rigidBB_clashes.png}\hspace{0.2in}\includegraphics[width=2in,height=1.5in]{figures/w54_overlay.png}
-\caption{Left: CATS allows systematic search over a voxel of backbone conformations in the vicinity of the wild-type backbone conformation (black).  The voxel is specified as box constraints on a novel set of backbone coordinates; conformations with one such coordinate moved to the edge of the voxel are shown in red and green, and a conformation with all such coordinates moved to the edge of the voxel is shown in purple.  See Fig. 1 of Ref.~\citen{CATS} for more details.  Middle: Rigid-backbone structural modeling of an experimentally effective mutant of anti-HIV gp120 antibody VRC07 showed unavoidable steric clashes between Trp 54 of VRC07 and Trp 427 and Gly 473 of gp120 (purple).  Right: CATS explained the experimentally observed activity by finding a new backbone conformation that resolved these clashes (green; overlaid with clashing rigid-body backbone (purple) and backbone conformation computed with the older DEEPer algorithm (blue)).  DEEPer reduced the clashes somewhat using backrub motions~\cite{backrub}, but they were still significant after the backrubs.  See Fig. 3 of Ref.~\citen{CATS} for more details.   Portions of this figure were reprinted with permission from Ref.~\citen{CATS}.  }
+\caption{Left: CATS allows systematic search over a voxel of backbone conformations in the vicinity of the wild-type backbone conformation (black).  The voxel is specified as box constraints on a novel set of backbone coordinates; conformations with one such coordinate moved to the edge of the voxel are shown in red and green, and a conformation with all such coordinates moved to the edge of the voxel is shown in purple.  See Fig. 1 of Ref.~\citen{CATS} for more details.  Middle: Rigid-backbone structural modeling of an experimentally effective mutant of anti-HIV gp120 antibody VRC07 showed unavoidable steric clashes between Trp 54 of VRC07 and Trp 427 and Gly 473 of gp120 (purple).  Right: CATS explained the experimentally observed activity by finding a new backbone conformation that resolved these clashes (green; overlaid with clashing rigid-body backbone (purple) and backbone conformation computed with the older DEEPer algorithm (blue)).  DEEPer reduced the clashes somewhat using backrub motions~\cite{backrub}, but they were still significant even after the backrubs.  See Fig. 3 of Ref.~\citen{CATS} for more details.   Portions of this figure were reprinted with permission from Ref.~\citen{CATS}.  }
 \label{fig:cats}
 \end{figure}
 
