--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@ However, as {\sc osprey} grew to include more algorithms and features (Fig.~\ref
 \center
 \includegraphics[width=6in]{figures/osprey_mantra.png}
  \vspace{-0.3in}%to fit the figure on one page
-\caption{The \osprey protein redesign suite. (A) The input model includes a 3D structure of the protein to be redesigned, a definition of the sequence space, the allowed protein flexibility (including the rotamer library), and a pairwise energy function. (B) Rigid DEE~\cite{DEE,DEE/A*}, iMinDEE~\cite{iMinDEE}, EPIC~\cite{EPIC}, LUTE~\cite{LUTE_RECOMB}, DEEPer~\cite{DEEPer}, and CATS~\cite{CATS} model different types of protein flexibility. Flexibility ranges in difficulty from complete rigidity to continuous side chain flexibility to complete flexibility including continuous backbone flexibility. (C) The EPIC~\cite{EPIC} and LUTE~\cite{LUTE_RECOMB} algorithms also expand energy function capability by allowing for non-pairwise, basic QM and solvation. (D) COMETS~\cite{COMETS} allows for multi-state design by comparing various bound and unbound states. This allows for multiple input structures. (E) These algorithms are implemented in OSPREY and improved through the use of GPU acceleration. According to the allowed flexibility, OSPREY runs a specific pruning algorithm followed by the \as search algorithm. The \as output generates a ranking based on either the lowest-energy structure of each sequence, or an ensemble of structures computed by the \ks algorithm. (F) The \bwmstar~\cite{BWM*} algorithm takes advantage of sparse trees and branch decomposition to outperform traditional \as. (G) The \ks~\cite{K*,minDEE} algorithm calculates a \ks score (an approximation of the binding constant, $K_a$) by provably estimating the partition function for the protein, the ligand, and the protein-ligand complex. The \ks algorithm exploits a thermodynamic ensemble of structures as opposed to a single structure as illustrated in the panel (PDB ID: 3FQC). \ks can also be used to find sequences that have a high affinity for one ligand (positive design) while having a low affinity for another (negative design) by taking a ratio of \ks scores~\cite{DHFR-PNAS,DHFR-PNAS2}. }
+\caption{The \osprey protein redesign suite. (A) The input model includes a 3D structure of the protein to be redesigned, a definition of the sequence space, the allowed protein flexibility (including the rotamer library), and a pairwise energy function. (B) Rigid DEE~\cite{DEE,DEE/A*}, iMinDEE~\cite{iMinDEE}, EPIC~\cite{EPIC}, LUTE~\cite{LUTE_RECOMB}, DEEPer~\cite{DEEPer}, and CATS~\cite{CATS} model different types of protein flexibility. Flexibility ranges in complexity from discrete, rigid rotamers to continuous side chain flexibility to complete flexibility including continuous backbone flexibility. (C) The EPIC~\cite{EPIC} and LUTE~\cite{LUTE_RECOMB} algorithms also expand energy function capability by allowing for non-pairwise, basic quantum chemistry and Poisson-Boltzmann solvation. (D) COMETS~\cite{COMETS} allows for multi-state design by optimizing sequences and conformations for user-specified bound and unbound states. This is accomplished using multiple input structures. (E) These algorithms are implemented in OSPREY and improved through the use of GPU acceleration. According to the allowed flexibility, OSPREY runs a specific pruning algorithm followed by a highly optimized descendant of the \as search algorithm~\cite{dynamic_A*}. The \as output generates a ranking based on either the lowest-energy structure of each sequence, or an ensemble of structures computed by the \ks algorithm. (F) The \bwmstar~\cite{BWM*} algorithm exploits sparse residue interaction graphs and branch decomposition to outperform traditional \as. (G) The \ks~\cite{K*,minDEE} algorithm calculates a \ks score (an approximation of the binding constant, $K_a$) by provably estimating the partition function for the protein, the ligand, and the protein-ligand complex. The \ks algorithm exploits a thermodynamic ensemble of structures as opposed to a single structure, as illustrated in the panel (PDB ID: 3FQC). \ks can also be used to find sequences that have a high affinity for one ligand (positive design) while having a low affinity for another (negative design) by taking a ratio of \ks scores~\cite{DHFR-PNAS,DHFR-PNAS2}. }
 \label{flowchart}
 \end{figure}
 
