--- a/references.bib
+++ b/references.bib
@@ -28,7 +28,7 @@
 @article{bindingbarnase,
   title={Thermodynamics of the interaction of barnase and barstar: changes in free energy versus changes in enthalpy on mutation1},
   author={Frisch, Christian and Schreiber, Gideon and Johnson, Christopher M and Fersht, Alan R},
-  journal={Journal of molecular biology},
+  journal={Journal of Molecular Biology},
   volume={267},
   number={3},
   pages={696--706},
@@ -113,7 +113,7 @@
   publisher={American Association for the Advancement of Science}
 }
 
-@inbook{BBK*,
+@inbook{BBK*_RECOMB,
 	Author = {Ojewole, Adegoke A. and Jou, Jonathan D. and Fowler, Vance G. and Donald, Bruce R.},
 	Date-Added = {2017-09-13 14:22:53 +0000},
 	Date-Modified = {2017-09-13 14:40:29 +0000},
@@ -126,6 +126,16 @@
 	Volume = {10229},
 	Year = {2017},
 	DOI = {10.1007/978-3-319-56970-3_10}}
+	
+@article{BBK*,
+  title={{BBK*(Branch and Bound Over K*)}: A Provable and Efficient Ensemble-Based Protein Design Algorithm to Optimize Stability and Binding Affinity Over Large Sequence Spaces},
+  author={Ojewole, Adegoke A and Jou, Jonathan D and Fowler, Vance G and Donald, Bruce R},
+  journal={Journal of Computational Biology},
+  year={2018},
+  publisher={Mary Ann Liebert, Inc. 140 Huguenot Street, 3rd Floor New Rochelle, NY 10801 USA},
+  note = {{Epub} ahead of print},
+}
+
 
 @misc{OSPREY,
 	Author = {Georgiev, Ivelin and Roberts, Kyle E. and Gainza, Pablo and Hallen, Mark A. and Donald, Bruce R.},
@@ -2323,5 +2333,19 @@
   pages={553-560},
   year={2008}
 }
+
+
+
+@article{gosprey,
+  title={An efficient parallel algorithm for accelerating computational protein design},
+  author={Zhou, Yichao and Xu, Wei and Donald, Bruce R and Zeng, Jianyang},
+  journal={Bioinformatics},
+  volume={30},
+  number={12},
+  pages={i255-i263},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
 
 
