--- a/GPU.tex
+++ b/GPU.tex
@@ -1,12 +1,12 @@
-One of the key challenges in protein design is modeling and searching the many continuous conformational degrees of freedom inherent in proteins and other molecules. The sidechain conformations of each amino-acid type are generally found in clusters, known as rotamers~\cite{rotamers}, so it is common practice to approximate protein conformational space as discrete by forcing each residue to be in the modal conformation of one of these clusters~\cite{DEE,DEE/A*}.  However, design accuracy is increased significantly when continuous flexibility is taken into account, by allowing the continuous degrees of freedom to move within finite bounds around these modal values~\cite{iMinDEE,DEEPer,OSPREY_MIE,BBK*}.  Moreover, this increase in accuracy depends on considering continuous flexibility~\textit{during} the conformational search process, rather than simply performing minimization~\textit{post hoc} on the top-scoring sequences and conformations output by a discrete search algorithm.  Although such a~\textit{post hoc} minimization approach would obtain more energetically favorable models of the top sequences, it would still produce the same top sequences as a purely discrete design would, which may not be truly the top sequences.  For example, clashing discrete rotamers can often be converted to favorable conformations by relatively small adjustments in the sidechain conformations~\cite{minDEE,iMinDEE,DEEPer,CATS}.  As a result, designs performed with continuous flexibility taken into account~\textit{throughout the search} yield significantly different, and more biologically accurate, sequences than the same designs performed using discrete search~\cite{iMinDEE,DEEPer,OSPREY_MIE}.  
+One of the key challenges in protein design is modeling and searching the many continuous conformational degrees of freedom inherent in proteins and other molecules. The sidechain conformations of each amino-acid type are generally found in clusters, known as rotamers~\cite{rotamers}, so it is common practice to approximate protein conformational space as discrete by forcing each residue to be in the modal conformation of one of these clusters~\cite{DEE,DEE/A*}.  However, design accuracy is increased significantly when continuous flexibility is taken into account, by allowing the continuous degrees of freedom to move within finite bounds around these modal values~\cite{iMinDEE,DEEPer,OSPREY_MIE,BBK*}.  Moreover, this increase in accuracy depends on considering continuous flexibility~\textit{during} the conformational search process, rather than simply performing minimization~\textit{post hoc} on the top-scoring sequences and conformations output by a discrete search algorithm.  Although such a~\textit{post hoc} minimization approach would obtain more energetically favorable models of the top sequences, it would still produce the same top sequences as a purely discrete design would, which have been shown to not be truly the top sequences, even if a much finer discrete rotamer subsampling is allowed~\cite{iMinDEE,OSPREY_MIE}.  For example, clashing discrete rotamers can often be converted to favorable conformations by relatively small adjustments in the sidechain conformations~\cite{minDEE,iMinDEE,DEEPer,CATS}.  As a result, designs performed with continuous flexibility taken into account~\textit{throughout the search} yield significantly different, and more biologically accurate, sequences than the same designs performed using discrete search~\cite{iMinDEE,DEEPer,OSPREY_MIE}.  
 
 To address this problem, \osprey includes several algorithms to design proteins while taking continuous flexibility into account throughout the process of sequence and conformational search~\cite{minDEE,iMinDEE,DEEPer,EPIC,LUTE_RECOMB,CATS}.   These algorithms predict optimal protein sequences with provable guarantees of accuracy given a biophysical model that includes continuous flexibility.  
 
 This~\textit{minimization-aware} design approach requires energy minimization to be performed for a large number of conformations (within the bounds on the continuous degree of freedom that define each conformation).  This minimization is a relatively expensive operation, so the bulk of a design's runtime can be spent on energy minimization of conformations. Therefore, improvements to the speed of energy minimization can have a dramatic impact on \osprey runtimes.  
 
-Much work has been done to optimize \osprey for execution on CPUs, particularly highly multi-core CPUs and even networked clusters of CPU-powered servers~\cite{minBounds_DACS,cloud_OSPREY}. However, modern GPU hardware enables high-performance computation for some specific tasks at a fraction of the cost of large CPU clusters, mainly due to the huge video game industry that propels innovation in hardware design and drives down costs. The widespread adoption of fast and highly programmable GPUs in the past decade has transformed many areas of computational science, including quantum chemistry~\cite{GPU_QM}, computer vision~\cite{ResNet}, and cryptography~\cite{GPU_crypto}.  In particular, GPUs have been found to produce speedups of approximately an order of magnitude in molecular dynamics simulations~\cite{HOOMD_GPU,AMBER_GPU_microseconds,GROMACS_GPU}, which, like \osprey, must sum huge numbers of forcefield energy terms and can use the GPU to parallelize this computation.  
+Much work has been done to optimize \osprey for execution on CPUs, particularly highly multi-core CPUs and even networked clusters of CPU-powered servers~\cite{minBounds_DACS,cloud_OSPREY}. However, modern GPU hardware enables high-performance computation for some specific tasks at a fraction of the cost of large CPU clusters, mainly due to the huge video game industry, which propels innovation in hardware design and drives down costs. The widespread adoption of fast and highly programmable GPUs in the past decade has transformed many areas of computational science, including quantum chemistry~\cite{GPU_QM}, computer vision~\cite{ResNet}, and cryptography~\cite{GPU_crypto}.  In particular, GPUs have been found to produce speedups of approximately an order of magnitude in molecular dynamics simulations~\cite{HOOMD_GPU,AMBER_GPU_microseconds,GROMACS_GPU}, which, like \osprey, must sum huge numbers of forcefield energy terms and can use the GPU to parallelize this computation.  GPUs have also been used to accelerate the~\as search step of protein design~\cite{gosprey}, albeit without addressing the continuous minimization bottleneck.  
 
-Thus, in order to bring the benefit of GPUs to protein design calculations, \osprey 3.0 includes GPU programs (called {\it kernels}) built using the CUDA framework~\cite{nvidia2010programming} that implement the forcefield calculations and local minimization algorithms used in protein redesign.
+Thus, in order to bring the benefit of GPUs to continuously flexible protein design calculations, \osprey 3.0 includes GPU programs (called {\it kernels}) built using the CUDA framework~\cite{nvidia2010programming} that implement the forcefield calculations and local minimization algorithms used in protein redesign.
 
 We present performance results of these GPU kernels on various hardware platforms in Figure~\ref{fig:gpu}. A GPU server housing 4 Nvidia Tesla P100 cards can finish minimizations with about 300,000 atom pairs roughly 110-fold faster than a single thread running on an Intel Xeon E5-2640 v4 CPU. With two Intel Xeon E5-2640 v4 CPUs running at full capacity with multiple threads, the four Nvidia Tesla P100 GPUs finish the same minimizations roughly 8-fold faster. The speedups of GPUs over CPUs scale with the number of atom pairs in the minimization. For minimizations with fewer (about 30,000) atom pairs, even four Nvidia Tesla P100 GPUs cannot outperform two Intel Xeon E5-2640 v4 CPUs. There is significant overhead to transfer each minimization problem from the CPU to the GPU during designs. Even though GPUs can evaluate the minimizations much faster than CPUs, when there are few atom pairs, this transfer overhead dominates the computation time and causes GPUs to perform merely similarly to CPUs, rather than significantly faster.  Nevertheless, the bottleneck in protein design is minimizations with many atom pairs, and for these minimizations \osprey's speedups on GPUs are on par with the state of the art for GPU speedups of molecular dynamics simulations.  
 
