--- a/discussion.tex
+++ b/discussion.tex
@@ -4,6 +4,6 @@ As our benchmark results here show, we have made substantial progress toward cor
 
 The large speedups in \osprey 3.0, together with the easy-to-use Python interface, thus make it much more tractable to perform protein design with such biophysically realistic modeling and with guaranteed accuracy given the model.  In particular, \osprey 3.0 benefits from many sources of speedups that can be used together.  Speedups from \osprey 3.0's optimization of the conformational minimization, forcefield evaluation, and A* routines can exceed two orders of magnitude even compared to \osprey 2.2~\cite{COMETS} running on the same CPU hardware.  Together with an additional speedup of over an order of magnitude from GPU's, a design that would take months using \osprey 2.2 could easily take only a few hours using \osprey 3.0.  Many designs could see even greater speedups, because in addition to these engineering improvements, some of the algorithmic improvements in \osprey 3.0 provide a dramatic increase in computational efficiency.  
 
-The improvements in modeling facilitated by \osprey 3.0's new algorithms also make protein design with \osprey more realistic.  However, there is still much room for improvement in the biophysical model used by \osprey, and indeed by all currently available protein software.  Modeling of larger backbone motions, more realistic interactions with water, and electronic polarization, among other phenomena, are all likely to yield substantial improvements in accuracy.  The refactored architecture of \osprey 3.0 will make it easier to experiment with algorithms that facilitate these modeling improvements, and to implement these algorithms within \osprey's current code base.  Moreover, we have released \osprey 3.0 as open source, to aid the community both in the development and the application of improved models and algorithms for computational protein design.  
+The improvements in modeling facilitated by \osprey 3.0's new algorithms also make protein design with \osprey more realistic.  However, there is still much room for improvement in the biophysical model used by \osprey, and indeed by all currently available protein design software.  Modeling of larger backbone motions, more realistic interactions with water, and electronic polarization, among other phenomena, are all likely to yield substantial improvements in accuracy.  The refactored architecture of \osprey 3.0 will make it easier to experiment with algorithms that facilitate these modeling improvements, and to implement these algorithms within \osprey's current code base.  Moreover, we have released \osprey 3.0 as open source, to aid the community both in the development and the application of improved models and algorithms for computational protein design.  
 
 
